[gd_scene load_steps=17 format=3 uid="uid://xe47faicgkl1"]

[ext_resource type="Script" path="res://Assets/Farm/Plot/Plot.gd" id="1_fr6ra"]
[ext_resource type="Texture2D" uid="uid://b1rq6i015x7pc" path="res://Assets/Farm/Plot/Plant/carrot.png" id="3_wwk4p"]
[ext_resource type="Texture2D" uid="uid://beald5cj0qs8i" path="res://Assets/Farm/Plot/Plant/pumpkin.png" id="4_5u2c6"]
[ext_resource type="Texture2D" uid="uid://d3ocfv3c01q5t" path="res://Assets/Farm/Plot/Plant/turnip.png" id="4_aq0x2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rxip"]
size = Vector2(66.25, 33.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_s05h0"]
atlas = ExtResource("3_wwk4p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ue1e"]
atlas = ExtResource("3_wwk4p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnkkt"]
atlas = ExtResource("3_wwk4p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abu76"]
atlas = ExtResource("4_aq0x2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2rxf"]
atlas = ExtResource("4_aq0x2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ske"]
atlas = ExtResource("4_aq0x2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwxha"]
atlas = ExtResource("4_5u2c6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol72"]
atlas = ExtResource("4_5u2c6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg4a0"]
atlas = ExtResource("4_5u2c6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_818xs"]
animations = [{
"frames": [],
"loop": true,
"name": &"-1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s05h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ue1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnkkt")
}],
"loop": true,
"name": &"0",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abu76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2rxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ske")
}],
"loop": false,
"name": &"1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwxha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg4a0")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_sgy45"]
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Plot" type="Area2D"]
script = ExtResource("1_fr6ra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 24.5)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_0rxip")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -42.0
offset_top = -94.0
offset_right = 39.0
offset_bottom = -70.0
text = "Plant seed"

[node name="SeedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_818xs")
animation = &"-1"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -48.0
offset_top = -94.0
offset_right = 60.0
offset_bottom = -71.0
text = "Harvest plant"

[node name="Label3" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -71.0
offset_top = -92.0
offset_right = 66.0
offset_bottom = -65.0
text = "Growth stage: "
label_settings = SubResource("LabelSettings_sgy45")

[node name="ItemList" type="ItemList" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -131.0
offset_top = -327.0
offset_right = 15.0
offset_bottom = -197.0
scale = Vector2(1.79124, 1.6)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
max_text_lines = 3
auto_height = true
max_columns = 3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
